src/test/deca/context/invalid/object/badAssign.deca
class X
{
  int a;
  boolean b = true;
}
class A extends X
{
  void r(int a) asm ("a");
}

class B extends A
{
  X x = new X();
  float a;
  void getX()
  {
    x.a = this.a;
  }
}

{
  B v = new B();
  X d = v.x;
  if (d.b)
  {
    println("hello");

  }
}
